--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
 
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    npm run build;
+    npm run build -- --env=prod;
     docker build -t hakant/stocks-angular -f ./.docker/nginx.dockerfile .;
     docker tag hakant/stocks-angular hakant/stocks-angular:$(git rev-parse --short HEAD);
     docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
